# msm-5.10

./: BUILD.bazel  Makefile  build.config.common  build.config.constants  build.config.gki.aarch64  build.config.gki.x86_64  build.config.msm.common
android/: abi_gki_aarch64_asus
drivers/android/: binder_alloc.c
drivers/input/touchscreen/goodix_berlin_driver/: Makefile
drivers/net/wireless/ath/wil6210/: config.c
drivers/scsi/ufs/: ufs-qcom.c  ufsfeature.h
drivers/soc/qcom/dcvs/: pmu_lib.c
lib/: Kconfig.debug
mm/: Kconfig
